fix viz page on firefox

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Stint+Ultra+Expanded&display=swap');
 
 :root {
   --bg: #111;
@@ -81,8 +81,8 @@ body::-webkit-scrollbar-thumb {
 
 #title {
   color: var(--white);
-  font-size: 6vmin;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 40px;
+  font-family: 'Stint Ultra Expanded', cursive;
   padding: 5px;
   position: absolute;
   margin-top: 20px;
@@ -141,7 +141,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .controller {
-  width: 10vw;
+  width: 15vmin;
   height: 100%;
   margin: 0 2vw 0 2vw;
   display: flex;
@@ -152,8 +152,12 @@ body::-webkit-scrollbar-thumb {
   width: 20vw;
 }
 
+.editor-page .controller {
+  width: 10vw;
+}
+
 .controller button {
-  font-size: 1.5vw;
+  font-size: 2.5vmin;
   font-family: "Fira Code", monospace;
   color: var(--white);
   text-align: center;
@@ -257,6 +261,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .level-overlay .overlay-text {
+  line-height: 1;
   color: var(--white);
   filter: blur(0);
 }
@@ -359,6 +364,32 @@ input[type="range"]:focus::-webkit-slider-runnable-track {
   background: #ccc;
 }
 
+/* firefox slider */
+
+input[type=range]::-moz-range-track {
+  height: 0.3vw;
+  background: #bbb;
+  border: none;
+  border-radius: 3px;
+}
+
+input[type=range]::-moz-range-thumb {
+  border: none;
+  height: 1vw;
+  width: 1vw;
+  border-radius: 50%;
+  background: rgb(85, 90, 141);
+  transform: translate(0, -10%);  
+}
+
+input[type=range]:-moz-focusring {
+  outline: none;
+}
+
+input[type=range]:focus::-moz-range-track {
+  background: #ccc;
+}
+
 /* slider - end */
 
 .slider-container {
@@ -378,13 +409,13 @@ input[type="range"]:focus::-webkit-slider-runnable-track {
 }
 
 .slider-label {
-  font-size: 0.8vw;
+  font-size: 1.5vmin;
   color: var(--white);
   margin-right: 3px;
 }
 
 .slider-value {
-  font-size: 1vw;
+  font-size: 2vmin;
   color: var(--white);
   transform: translate(5px, 1px);
 }
@@ -413,6 +444,8 @@ input[type="range"]:focus::-webkit-slider-runnable-track {
 }
 
 .tile-checkbox {
+  width: 100%;
+  height: 100%;
   background-color: var(--light-blue);
   filter: brightness(0.8);
 }
